--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 2rem 4rem;
-    background-color: #1f1f1f;
+    background-color: #800000;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
@@ -85,6 +85,24 @@ body {
     z-index: 1;
   }
   
+  .details h3 {
+    font-size: 2.4rem;
+    color: #ff5722;
+    margin-bottom: 1rem;
+  }
+  
+  .details p, .details ul {
+    font-size: 1.6rem;
+    color: #e0e0e0;
+    margin-bottom: 1.5rem;
+    max-width: 700px;
+    text-align: center;
+  }
+  
+  .details ul li {
+    margin-bottom: 0.5rem;
+  }
+  
   .form {
     display: flex;
     flex-direction: column;
@@ -124,7 +142,7 @@ body {
   
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
   
-  /* Geometry Shapes */
+  /* Geometric Shapes */
   .section::after {
     content: '';
     position: absolute;
