--- a/src/App.css
+++ b/src/App.css
@@ -584,7 +584,7 @@ button:hover {
 
 /* Update Apply section background */
 .apply-section {
-  background-image: url('/images/about.jpg');
+  background-image: url('../public/images/about.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
